--- a/CMD/Dockerfile
+++ b/CMD/Dockerfile
@@ -3,4 +3,4 @@ FROM almalinux:8
 RUN yum install nginx -y
 RUN echo "welcome dockerfile to create own images" > /usr/share/nginx//hello.html
 # deamon off command is makes container running and attached to screen
-CMD [ "nginx", "-g", "deamon off;" ]
+CMD [ "nginx", "-g", "daemon off;" ]
