--- a/ADD/Dockerfile
+++ b/ADD/Dockerfile
@@ -1,3 +1,4 @@
 FROM almalinux:8
 ADD hello.txt /tmp/
 ADD https://github.com/chandrasekharyv/raw-notes/blob/master/SESSION-06.txt /tmp/
+ADD sample-1.tar /tmp/
