--- a/ENTRYPOINT/Dockerfile
+++ b/ENTRYPOINT/Dockerfile
@@ -1,6 +1,7 @@
 FROM almalinux:8
 # almalinux is same as centos
 RUN yum install nginx -y
+RUN rm -rf /usr/share/nginx/html/hello.html
 RUN echo "welcome dockerfile to create own images" > /usr/share/nginx/html/hello.html
 # deamon off command is makes container running and attached to screen
 ENTRYPOINT [ "nginx", "-g", "daemon off;" ]
