--- a/ARG/Dockerfile
+++ b/ARG/Dockerfile
@@ -1,3 +1,6 @@
 ARG version
 FROM almalinux:${version:-8}
 RUN echo "arguments in docker version: ${version}"
+ARG COURSE
+ARG DURATION
+RUN echo "course is ${COURSE} and duration is ${DURATION}"
