--- a/ARG/Dockerfile
+++ b/ARG/Dockerfile
@@ -1,6 +1,8 @@
 ARG version
 FROM almalinux:${version:-8}
 RUN echo "arguments in docker version: ${version}"
-ARG COURSE
+ARG COURSE 
 ARG DURATION
-RUN echo "course is ${COURSE} and duration is ${DURATION}"
+ENV COURSE=${COURSE}
+ENV DURATION=${DURATION}
+RUN echo "course is ${COURSE}, and duration is ${DURATION}"
